<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/controlsFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cancelArmButton"
        android:name="com.example.wally.ui.gripper_controls.GripperControlsFragment" />

    <LinearLayout
        android:id="@+id/cancelArmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/cancelArmImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/roundedbutton_red"
            android:contentDescription="@string/cancel_button"
            android:src="@drawable/ic_baseline_arrow_return_24" />

        <TextView
            android:id="@+id/cancelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/cancel_arm"
            android:textAlignment="gravity"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirmArmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/confirmArmText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/register"
            android:textAlignment="gravity"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/confirmImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/roundedbutton_green"
            android:contentDescription="@string/confirm_button"
            android:src="@drawable/ic_baseline_check_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>