<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="12dp">

<!--    <ImageButton-->
<!--        android:id="@+id/btnClose"-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginTop="48dp"-->
<!--        android:layout_marginEnd="48dp"-->
<!--        android:background="@drawable/roundedbutton"-->
<!--        android:contentDescription="Close modal"-->
<!--        android:src="@drawable/ic_baseline_close_24"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_task"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/name_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="Task Name"/>

    <TextView
        android:id="@+id/route_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/route"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/record_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0057"
        android:text="@string/record"
        android:textStyle="bold"
        app:cornerRadius="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="right">

        <LinearLayout
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:id="@+id/confirmTaskText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="Confirm"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/confirmImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/roundedbutton_green"
                android:src="@drawable/ic_baseline_check_24" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>