<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/devices_swipe_refresh"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bluetoothText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            android:text="@string/title_bluetooth"
            android:textAlignment="gravity"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connected_device"
            android:textSize="24sp"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/connectedDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground" >

            <TextView
                android:id="@+id/connected_device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/connected_device_mac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_below="@id/connected_device_name"
                android:layout_alignStart="@id/connected_device_name"
                android:textAppearance="?android:attr/textAppearanceListItemSecondary" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paired_devices"
            android:textSize="24sp"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bluetooth_devices"
            android:scrollbars="vertical"
            android:fadeScrollbars="true"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>